fix(api): always send `per_page` parameter
